@@ -3106,46 +3106,6 @@ static PyObject* CFGetMap(PyObject* self, PyObject* args)
 };
 
 /*****************************************************************************/
-/* Name   : CFSetNextObject                                                  */
-/* Python : CFPython.SetNextObject(object,object)                            */
-/* Status : Stable                                                           */
-/*****************************************************************************/
-static PyObject* CFSetNextObject(PyObject* self, PyObject* args)
-{
-    long whoptr;
-    long whatptr;
-    if (!PyArg_ParseTuple(args,"ll",&whoptr,&whatptr))
-        return NULL;
-
-    CHECK_OBJ(whoptr);
-    CHECK_OBJ(whatptr);
-
-    WHO->below = WHAT;
-    Py_INCREF(Py_None);
-    return Py_None;
-};
-
-/*****************************************************************************/
-/* Name   : CFSetPreviousObject                                              */
-/* Python : CFPython.SetPreviousObject(object,object)                        */
-/* Status : Stable                                                           */
-/*****************************************************************************/
-static PyObject* CFSetPreviousObject(PyObject* self, PyObject* args)
-{
-    long whoptr;
-    long whatptr;
-    if (!PyArg_ParseTuple(args,"ll",&whoptr,&whatptr))
-        return NULL;
-
-    CHECK_OBJ(whoptr);
-    CHECK_OBJ(whatptr);
-
-    WHO->above = WHAT;
-    Py_INCREF(Py_None);
-    return Py_None;
-};
-
-/*****************************************************************************/
 /* Name   : CFGetNextObject                                                  */
 /* Python : CFPython.GetNextObject(object)                                   */
 /* Status : Stable                                                           */
@@ -3483,187 +3443,6 @@ static PyObject* CFSay(PyObject* self, PyObject* args)
     Py_INCREF(Py_None);
     return Py_None;
 };
-
-/*****************************************************************************/
-/* Name   : CFSetGender                                                      */
-/* Python : CFPython.SetGender(object,gender_string)                         */
-/* Status : Stable                                                           */
-/*****************************************************************************/
-static PyObject* CFSetGender(PyObject* self, PyObject* args)
-{
-    object *who, *walk;
-    long obptr;
-    char *gender;
-
-    if (!PyArg_ParseTuple(args,"ls",&obptr,&gender))
-        return NULL;
-
-    CHECK_OBJ(obptr);
-
-    who = (object *)(obptr);
-
-    for(walk=who->inv;walk!=NULL;walk=walk->below)
-    {
-        if (!strcmp(walk->name,"GENDER_FORCE") && !strcmp(walk->arch->name,"gender_force"))
-        {
-            /* we find the gender of the player, now change it to new one */
-            if(walk->title)
-                DELETE_STRING(walk->title);
-            walk->title = add_string(gender);
-
-            who->contr->socket.ext_title_flag = 1; /* demand update to client */
-            return Py_BuildValue("l",(long) (walk));
-        }
-    }
-
-    printf("Python Warning -> SetGender: Object %s has no gender_force!\n", query_name(who));
-    Py_INCREF(Py_None);
-    return Py_None;
-};
-
-/*****************************************************************************/
-/* Name   : CFSetRank                                                        */
-/* Python : CFPython.SetRank(object,rank_string)                             */
-/* Status : Stable                                                           */
-/*****************************************************************************/
-static PyObject* CFSetRank(PyObject* self, PyObject* args)
-{
-    object *who, *walk;
-    long obptr;
-    char *rank;
-
-    if (!PyArg_ParseTuple(args,"ls",&obptr,&rank))
-        return NULL;
-
-    CHECK_OBJ(obptr);
-
-    who = (object *)(obptr);
-
-    for(walk=who->inv;walk!=NULL;walk=walk->below)
-    {
-        if (!strcmp(walk->name,"RANK_FORCE") && !strcmp(walk->arch->name,"rank_force"))
-        {
-            /* we find the rank of the player, now change it to new one */
-            if(walk->title)
-                DELETE_STRING(walk->title);
-            if (strcmp(rank,"Mr"))
-                walk->title = add_string(rank);
-
-            who->contr->socket.ext_title_flag = 1; /* demand update to client */
-            return Py_BuildValue("l",(long) (walk));
-        }
-    }
-    printf("Python Warning -> SetRank: Object %s has no rank_force!\n", query_name(who));
-    Py_INCREF(Py_None);
-    return Py_None;
-};
-
-/*****************************************************************************/
-/* Name   : CFSetAlignment                                                   */
-/* Python : CFPython.SetAlignment(object,alignment_string)                   */
-/* Status : Stable                                                           */
-/*****************************************************************************/
-static PyObject* CFSetAlignment(PyObject* self, PyObject* args)
-{
-    object *who, *walk;
-    long obptr;
-    char *align;
-
-    if (!PyArg_ParseTuple(args,"ls",&obptr,&align))
-        return NULL;
-
-    CHECK_OBJ(obptr);
-
-    who = (object *)(obptr);
-
-    for(walk=who->inv;walk!=NULL;walk=walk->below)
-    {
-        if (!strcmp(walk->name,"ALIGNMENT_FORCE")  && !strcmp(walk->arch->name,"alignment_force"))
-        {
-            /* we find the rank of the player, now change it to new one */
-            if(walk->title)
-                DELETE_STRING(walk->title);
-
-            if (!strcmp(align,"good"))
-                walk->title = add_string("the Good");
-            else if (!strcmp(align,"evil"))
-                walk->title = add_string("the Evil");
-            who->contr->socket.ext_title_flag = 1; /* demand update to client */
-            return Py_BuildValue("l",(long) (walk));
-        }
-    }
-    printf("Python Warning -> SetAlignment: Object %s has no alignment_force!\n", query_name(who));
-    Py_INCREF(Py_None);
-    return Py_None;
-};
-
-/*****************************************************************************/
-/* Name   : CFSetGuildForce                                                  */
-/* Python : CFPython.SetGuildForce(object,guild_string)                      */
-/* Status : Stable                                                           */
-/* Info   : Warning: This set only the title. The guild tag is in <slaying>  */
-/*        : For test of a special guild, you must use GetGuild()             */
-/*        : For settings inside a guild script, you can use this function    */
-/*        : Because it returns the guild_force obj after setting the title   */
-/*****************************************************************************/
-static PyObject* CFSetGuildForce(PyObject* self, PyObject* args)
-{
-    object *who, *walk;
-    long obptr;
-    char *guild;
-
-    if (!PyArg_ParseTuple(args,"ls",&obptr,&guild))
-        return NULL;
-
-    CHECK_OBJ(obptr);
-
-    who = (object *)(obptr);
-
-    for(walk=who->inv;walk!=NULL;walk=walk->below)
-    {
-        if (!strcmp(walk->name,"GUILD_FORCE") && !strcmp(walk->arch->name,"guild_force"))
-        {
-            /* we find the rank of the player, now change it to new one */
-            if(walk->title)
-                DELETE_STRING(walk->title);
-            if (guild && strcmp(guild, ""))
-                walk->title = add_string(guild);
-
-            who->contr->socket.ext_title_flag = 1; /* demand update to client */
-            return Py_BuildValue("l",(long) (walk));
-        }
-    }
-    printf("Python Warning -> SetGuild: Object %s has no guild_force!\n", query_name(who));
-    Py_INCREF(Py_None);
-    return Py_None;
-};
-
-/*****************************************************************************/
-/* Name   : CFGetGuildForce                                                  */
-/* Python : CFPython.GetGuildForce(object)                                   */
-/* Status : Stable                                                           */
-/* Info   : This gets the guild_force from a inventory (should be player?)   */
-/*****************************************************************************/
-static PyObject* CFGetGuildForce(PyObject* self, PyObject* args)
-{
-    object *walk;
-    long whoptr;
-
-    if (!PyArg_ParseTuple(args,"l",&whoptr))
-        return NULL;
-
-    CHECK_OBJ(whoptr);
-
-    for(walk=WHO->inv;walk!=NULL;walk=walk->below)
-    {
-        if (!strcmp(walk->name,"GUILD_FORCE") && !strcmp(walk->arch->name,"guild_force"))
-            return Py_BuildValue("l",(long) (walk));
-    }
-    printf("Python Warning -> GetGuild: Object %s has no guild_force!\n", query_name(WHO));
-    Py_INCREF(Py_None);
-    return Py_None;
-};
-
 
 /*****************************************************************************/
 /* Name   : CFSetInvisible                                                   */
@@ -4469,158 +4248,6 @@ static PyObject* CFCheckInvisibleObjectInside(PyObject* self, PyObject* args)
 
     return Py_BuildValue("l",(long)(tmp2));
 };
-
-/*****************************************************************************/
-/* Name   : CFCreatePlayerForce                                              */
-/* Python : CFPython.CreatePlayerForce(object,string)                        */
-/* Status : Stable.                                                          */
-/* Info   : The Values of a player force will effect the player.             */
-/*****************************************************************************/
-static PyObject* CFCreatePlayerForce(PyObject* self, PyObject* args)
-{
-    long whereptr;
-    char* txt;
-    char txt2[16];
-    object *myob;
-    object *where;
-    CFParm* CFR;
-
-    if (!PyArg_ParseTuple(args,"ls",&whereptr,&txt))
-        return NULL;
-
-    CHECK_OBJ(whereptr);
-
-    where = (object *)(whereptr);
-
-    strcpy(txt2,"player_force");
-
-    GCFP.Value[0] = (void *)(txt2);
-    CFR = (PlugHooks[HOOK_GETARCHETYPE])(&GCFP);
-    myob = (object *)(CFR->Value[0]);
-    PyFreeMemory( CFR );
-
-    if(strncmp(query_name(myob), "singluarity", 11) == 0)
-    {
-        set_exception("can't find archetype 'player_force'");
-        return NULL;
-    }
-
-    /* setup the force and put it in activator */
-    myob->name = add_string(txt);
-    myob = insert_ob_in_ob(myob, where);
-
-    GCFP.Value[0] = (void *)(where);
-    GCFP.Value[1] = (void *)(myob);
-    (PlugHooks[HOOK_ESRVSENDITEM])(&GCFP);
-
-    return Py_BuildValue("l",(long)(myob));
-};
-
-/*****************************************************************************/
-/* Name   : CFCreatePlayerInfo                                               */
-/* Python : CFPython.CreatePlayerInfo(object,string)                         */
-/* Status : Stable                                                           */
-/* Info   : The Values of a player_info object will NOT effect the player.   */
-/*****************************************************************************/
-static PyObject* CFCreatePlayerInfo(PyObject* self, PyObject* args)
-{
-    long whereptr;
-    char* txt;
-    char txt2[16];
-    object *myob;
-    object *where;
-    CFParm* CFR;
-
-    if (!PyArg_ParseTuple(args,"ls",&whereptr,&txt))
-        return NULL;
-
-    CHECK_OBJ(whereptr);
-
-    where = (object *)(whereptr);
-
-    strcpy(txt2,"player_info");
-
-    GCFP.Value[0] = (void *)(txt2);
-    CFR = (PlugHooks[HOOK_GETARCHETYPE])(&GCFP);
-    myob = (object *)(CFR->Value[0]);
-    PyFreeMemory( CFR );
-
-    if(strncmp(query_name(myob), "singluarity", 11) == 0)
-    {
-        set_exception("can't find archetype 'player_info'");
-        return NULL;
-    }
-
-    /* setup the info and put it in activator */
-    myob->name = add_string(txt);
-    myob = insert_ob_in_ob(myob, where);
-
-    GCFP.Value[0] = (void *)(where);
-    GCFP.Value[1] = (void *)(myob);
-    (PlugHooks[HOOK_ESRVSENDITEM])(&GCFP);
-
-    return Py_BuildValue("l",(long)(myob));
-};
-
-/*****************************************************************************/
-/* Name   : CFGetPlayerInfo                                                  */
-/* Python : CFPython.GetPlayerInfo(who, <name_text>)                         */
-/* Status : Stable                                                           */
-/*        : player_info: get first player_info in inventory with name_text   */
-/*****************************************************************************/
-static PyObject* CFGetPlayerInfo(PyObject* self, PyObject* args)
-{
-    long whoptr;
-    char *name;
-    object *walk;
-
-    if (!PyArg_ParseTuple(args,"ls",&whoptr,&name))
-        return NULL;
-
-    CHECK_OBJ(whoptr);
-
-    /* get the first linked player_info arch in this inventory */
-    for(walk=WHO->inv;walk!=NULL;walk=walk->below)
-    {
-        if (!strcmp(walk->arch->name,"player_info") && !strcmp(walk->name,name))
-            return Py_BuildValue("l",(long)(walk));
-    }
-
-    Py_INCREF(Py_None);
-    return Py_None; /* there was none */
-};
-
-
-/*****************************************************************************/
-/* Name   : CFGetNextPlayerInfo                                              */
-/* Python : CFPython.GetNextPlayerInfo(who, player_info)                     */
-/* Status : Stable                                                           */
-/*        : player_info: get next player_info in inventory with same name    */
-/*****************************************************************************/
-static PyObject* CFGetNextPlayerInfo(PyObject* self, PyObject* args)
-{
-    long whereptr;
-    object *myob, *walk;
-
-    if (!PyArg_ParseTuple(args,"ll",&whereptr,&myob))
-        return NULL;
-
-    CHECK_OBJ(whereptr);
-    CHECK_OBJ(myob);
-
-    /* thats our check parameters: arch "force_info", name of this arch */
-
-    /* get the next linked player_info arch in this inventory */
-    for(walk=myob->below;walk!=NULL;walk=walk->below)
-    {
-        if (!strcmp(walk->arch->name,"player_info") && !strcmp(walk->name,myob->name))
-            return Py_BuildValue("l",(long)(walk));
-    }
-
-    Py_INCREF(Py_None);
-    return Py_None; /* there was none left */
-};
-
 
 /*****************************************************************************/
 /* Name   : CFCreateInvisibleObjectInside                                    */
