@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+plugin/plugin_pyhton.c, plugin/include/plugin_python.h: Remove obsolete
+   functions: SetGender, SetRank, SetAlignment, SetGuildForce, GetGuildForce,
+   CreatePlayerForce, CreatePlayerInfo, GetPlayerInfo, GetNextPlayerInfo,
+   SetPreviousObject, SetNextObject.
 plugin/plugin_python.c, plugin/include/plugin_python.h: Add missing attack type
    wrapper functions, function CFPython.SetDamned(), wrapper functions for
    missing cost flags, and wrapper functions for event types.
